@@ -164,6 +164,7 @@ See docs/WHAT_IS_WEFTEND.md and docs/WHY_RECEIPTS.md for details.
 - `ticket_summary.txt` now also includes compare semantics lines (`compareVerdict`, `compareBuckets`, `compareBucketCount`, `compareChangeCount`) with deterministic text-report fallback when `compare_receipt.json` is absent.
 - Ticket-pack assembly now stages to `ticket_pack.stage` and finalizes to `ticket_pack` only after privacy lint passes.
 - On Windows `--zip`, archive output also stages to `ticket_pack.zip.stage` and finalizes to `ticket_pack.zip`.
+- Ticket-pack now enforces a no-orphan staged evidence check before finalize; staged files must match the deterministic expected ticket-pack set.
 
 7) Builder integration (for tools built on top)
 - Export deterministic integration JSON:
